Fix flexbox issue where image would not align next to text by stating text width

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vhS;
+    height: 100vh;
+    box-sizing: border-box;
+
 }
 
 /* This is for the header*/
@@ -48,15 +50,16 @@ ul {
     align-items: center;
 }
 
-/* This is for the main content */
+/* This is for the main content 1 */
 
 .content {
     display: flex;
     background-color: #f1d2dd;
     padding: 50px;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
-
 
 h3 {
     font-size: 48px;
@@ -68,17 +71,21 @@ h3 {
 }
 
 .text {
+    display: flex;
     font-family: monospace, "Times New Roman", sans-serif;
     font-size: 16px;
     margin-left: 20px;
     margin-bottom: 10px;
     margin-right: 12px;
     color: #361b22;
+    width: 400px;
+
 }
 
 #one {
     font-size: 15px;
     margin-left: 20px;
+    margin-bottom: 20px;
     background-color:  #7d9255;
     text-align: center;
     border: none;
@@ -88,20 +95,48 @@ h3 {
     color: white;
     font-weight: bold;
     border: rgb(44, 42, 42) solid 1px;
-}
 
+}
 
 #branch {
     display: flex;
-    max-width: 400px;
-    height: auto;
     border-radius: 25px;
     border: rgb(102, 97, 97) solid 1px;
+    
 }
 
+/* This is for the main content 2 */
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
+#heading {
+    display: flex;
+    justify-content: center;
+    
+}
 
+.card {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.blossom {
+    display: flex;
+    object-fit: cover;
+    border-radius: 15px;
+    margin: 10px;
+    
+}
+
+.words {
+    text-align: center;
+}
 
 /*This is for the footer*/
 
